--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.9",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
         "phpdocumentor/reflection-docblock": "^5.3",
@@ -46,6 +47,7 @@
     },
     "require-dev": {
         "escapestudios/symfony2-coding-standard": "3.x-dev",
+        "friendsofphp/php-cs-fixer": "^3.17",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
