--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=true
 APP_SECRET=f7dfa1d7f300538b633ba53bfb25dc7e
 ###< symfony/framework-bundle ###
 
