--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     tricks_list_load_limit: 5
+    comments_list_limit: 5
     trick_folder_path: '../assets/uploads/Trick'
 
 services:
