--- a/.env
+++ b/.env
@@ -44,3 +44,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # MAILER_DSN=sendinblue+api://KEY@default
 # MAILER_DSN=sendinblue+smtp://USERNAME:PASSWORD@default
 ###< symfony/sendinblue-mailer ###
+
+TIMEZONE=Europe/Paris
