--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    timezone: '%env(TIMEZONE)%'
     tricks_list_load_limit: 5
     comments_list_limit: 5
     trick_folder_path: '../assets/uploads/Trick'
