--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,7 @@ parameters:
     tricks_list_load_limit: 5
     comments_list_limit: 5
     trick_folder_path: '../assets/uploads/Trick'
+    user_folder_path: '../assets/uploads/User'
 
 services:
     # default configuration for services in *this* file
