--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.4",
     "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "expose-loader": "^4.1.0",
     "file-loader": "^6.2.0",
     "postcss-loader": "^7.3.0",
+    "prettier": "^3.0.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
