--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "file-loader": "^6.2.0",
     "postcss-loader": "^7.3.0",
     "prettier": "^3.0.0",
+    "remark-cli": "^11.0.0",
+    "remark-lint": "^9.1.2",
+    "remark-lint-final-newline": "^2.1.2",
+    "remark-lint-list-item-indent": "^3.1.2",
+    "remark-preset-lint-recommended": "^6.1.3",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
