--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "escapestudios/symfony2-coding-standard": "3.x-dev",
         "friendsofphp/php-cs-fixer": "^3.17",
         "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7",
         "symfony/browser-kit": "6.3.*",
         "symfony/css-selector": "6.3.*",
         "symfony/debug-bundle": "6.3.*",
